# PubliScore

./: .env.example  .gitignore  LICENSE  README.md  app.py  areagrade.sh  pyproject.toml  render.yaml  requirements.txt  test_data_loading.py
app/: app.py  routes.py
app/models/: scoring.py
app/static/css/: style.css
app/static/js/: address-autocomplete.js  carbon-calculator.js  main.js
app/templates/: base.html  home.html  route.html  search.html  team.html
app/utils/: data_loader.py  gemini_utils.py  gtfs_loader.py
static/: temp_map.html
static/css/: styles.css
templates/: 404.html  500.html  about.html  base.html  index.html  results.html  search.html  team.html
utils/: __init__.py  data_loader.py  grading.py
